<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{64bd5361-6c27-4db0-83bb-afded3445a11}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
////// Layout Interativo ////////

	
	
	corPos: DWORD;
	
  (*Pos Com Reator 00C000
	Pos Sem Reator FFFF00
	Pos Livre FFFFFF*)
	n: INT;
	
	cfgPos_OF019: STRING;
	cfgPos_OF020: STRING;
	cfgPos_OF021: STRING;
	cfgPos_LT019: STRING;
	cfgPos_LT020: STRING;
	cfgPos_LT021: STRING;
	cfgPos_Class019: REAL;
	cfgPos_Class020: REAL;
	cfgPos_Class021: REAL;
	cfgPos_Pot019: REAL;
	cfgPos_Pot020: REAL;
	cfgPos_Pot021: REAL;
	cfgPos_Reat019: BOOL;
	cfgPos_Reat020: BOOL;
	cfgPos_Reat021: BOOL;
	
	
	
////// Status Programação ///////////	

	
	logRegister: ARRAY[0..2] OF STRING;
	logRegister19: STRING;
	logRegister20: STRING;
	logRegister21: STRING;
	addTextLog: STRING;
	totalPos: ARRAY[0..2] OF INT;
	totalSeca: ARRAY[0..2] OF STRING;
	totalArm: ARRAY[0..2] OF STRING;
	totalRaet: ARRAY[0..2] OF INT;
	
	progInicio: ARRAY[0..2] OF STRING; //'DT#2024-3-31-23:59:0'
	progInicioReat: STRING;
	ano: STRING;
	mes: STRING;
	dia: STRING;
	hora: STRING;
	minuto: STRING;
	
	
	
	endSeca19: TIME;
	endSeca20: TIME;
	endSeca21: TIME;
	
	endArm19: TIME;
	endArm20: TIME;
	endArm21: TIME;
	
	
	
////// System Time ///////////	
	
	fbGetLocalSystemTime: FB_LocalSystemTime;
	sSystemDateTime: STRING;
	sSystemTime: STRING;
	sSystemDate: STRING;
	sDateTime: STRING;
	
	somaTempo: DATE_AND_TIME;
	
////// NÃO DEFINIDAS //////	
	actPos: INT;
	actEst: INT;
	actReat: INT;
	estAtiva: STRING;
	
	bVentOn: BOOL;
	bAquecOn: BOOL;
	
	envialog: string;
	
	bstartchart019: BOOL;
	bstartchart020: BOOL;
	bstartchart021: BOOL;
	bAgendaInicio: BOOL;
	
////// DECLARAÇÃO IOs //////

	AnalogIn_4_20 AT %I* : ARRAY[0..9] OF INT;
	AnalogOut_0_10 AT %Q* : ARRAY[0..9] OF INT;
	DigitalIn1 AT %I* : ARRAY[1..16] OF BOOL;
	DigitalIn2 AT %I* : ARRAY[1..16] OF BOOL;
	DigitalIn3 AT %I* : ARRAY[1..16] OF BOOL;
	DigitalOut1 AT %Q* : ARRAY[1..16] OF BOOL;
	DigitalOut2 AT %Q* : ARRAY[1..16] OF BOOL;
	
	
////// VARIAVEIS ESTUFA 019 //////

	zona1atual_019: REAL;
	zona2atual_019: REAL;
	zonaSegAtual_019: REAL;
	
	
	sobrecarga_M1_vent_019: BOOL;
	sobrecarga_M2_vent_019: BOOL;
	sobrecarga_Purga_019: BOOL;
	falhaTempHigh_019: BOOL;
	queimador1_block_019: BOOL;
	queimador2_block_019: BOOL;
	ventilacao_Ligada_019: BOOL;
	aquecimento_Desligado_019: BOOL;
	aquecimento_Ligado_019: BOOL;
	fimCicloAquecimento_019: BOOL;
	purgandoCamara_019: BOOL;
	liga_ventilacao_019: BOOL;
	liga_aquecimento_019: BOOL;
	desl_aquecimento_019: BOOL;
	emergencia019: BOOL;
	inEmergencia019: BOOL;
	
////// VARIAVEIS ESTUFA 020 //////

	zona1atual_020: REAL;
	zona2atual_020: REAL;
	zonaSegAtual_020: REAL;
	
	
	sobrecarga_M1_vent_020: BOOL;
	sobrecarga_M2_vent_020: BOOL;
	sobrecarga_Purga_020: BOOL;
	falhaTempHigh_020: BOOL;
	queimador1_block_020: BOOL;
	queimador2_block_020: BOOL;
	ventilacao_Ligada_020: BOOL;
	aquecimento_Desligado_020: BOOL;
	aquecimento_Ligado_020: BOOL;
	fimCicloAquecimento_020: BOOL;
	purgandoCamara_020: BOOL;
	liga_ventilacao_020: BOOL;
	liga_aquecimento_020: BOOL;
	desl_aquecimento_020: BOOL;	
	emergencia020: BOOL;
	inEmergencia020: BOOL;
	
////// VARIAVEIS ESTUFA 021 //////

	zona1atual_021: REAL;
	zona2atual_021: REAL;
	zonaSegAtual_021: REAL;
	
	
	sobrecarga_M1_vent_021: BOOL;
	sobrecarga_M2_vent_021: BOOL;
	sobrecarga_Purga_021: BOOL;
	falhaTempHigh_021: BOOL;
	queimador1_block_021: BOOL;
	queimador2_block_021: BOOL;
	ventilacao_Ligada_021: BOOL;
	aquecimento_Desligado_021: BOOL;
	aquecimento_Ligado_021: BOOL;
	fimCicloAquecimento_021: BOOL;
	purgandoCamara_021: BOOL;
	liga_ventilacao_021: BOOL;
	liga_aquecimento_021: BOOL;
	desl_aquecimento_021: BOOL;	
	emergencia021: BOOL;
	inEmergencia021: BOOL;
	
////// VARIAVEIS PRODWIN /////

	pwProd_019: BOOL;
	pwProd_020: BOOL;
	pwProd_021: BOOL;
	pwEmerg_019: BOOL;
	pwEmerg_020: BOOL;
	pwEmerg_021: BOOL;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>